api/swimos_form/src/tests/derive/form/empty_tag.stderr
error: New tag cannot be empty
  --> src/tests/derive/form/empty_tag.rs:19:18
   |
19 |     #[form(tag = "")]
   |                  ^^
